# project-ariel

./: README.md  install.sh
arieltune/: Cargo.toml  Makefile  README.md  SECURITY.md  install.sh
arieltune/crates/apu/: Cargo.toml
arieltune/crates/apu/kmod/nct6687-bc250/: 0001-nct6687-bc250-ec-firmware-attach.patch  NOTICE  README.md  build-and-install.sh
arieltune/crates/apu/kmod/nct6687-bc250/prebuilt/: nct6687-7.0.9-1-cachyos-bore.ko
arieltune/crates/apu/patches/: NOTICE
arieltune/crates/apu/patches/bc250-cachyos-7.0.9/: 04-start-pmfw-telemetry-reporting.patch  05-raceless-direct-gfxclk-query.patch  06-read-cac-weight-baselines.patch  07-cac-weight-and-sendraw-debugfs.patch  08-smu-cmn-send-raw-debugfs-definitions.patch  09-cpu-cclk-soft-limits-debugfs.patch  10-print-full-32bit-cac-value.patch  11-full-telemetry-dump-debugfs.patch  12-unlock-all-40-compute-units.patch  SERIES.md
arieltune/crates/apu/profiles/: factory.json  safe.json
arieltune/crates/apu/shaders/: kat.comp
arieltune/crates/apu/src/: cli.rs  cpu.rs  cu.rs  curoute.rs  cutest.rs  detect.rs  dpm.rs  gpuctl.rs  kat.spv  kbuild.rs  lib.rs  patches.rs  persist.rs  profile.rs  screen.rs  stress.rs  telemetry.rs
arieltune/crates/apu/systemd/: arieltune-gpu.service  arieltune-poke@.service  arieltune-route.service
arieltune/crates/ariel-compute/: Cargo.toml
arieltune/crates/ariel-compute/src/: lib.rs
arieltune/crates/ariel-hal/: Cargo.toml
arieltune/crates/ariel-hal/src/: lib.rs
arieltune/crates/ariel-smu/: Cargo.toml
arieltune/crates/ariel-smu/src/: lib.rs  ocq3.rs  smu.rs
arieltune/crates/arieltune-tui-kit/: Cargo.toml
arieltune/crates/arieltune-tui-kit/src/: lib.rs  screen.rs  theme.rs  widgets.rs
arieltune/crates/bc250-board/: Cargo.toml
arieltune/crates/bc250-board/src/: lib.rs
arieltune/crates/bc250-catalog/: Cargo.toml
arieltune/crates/bc250-catalog/src/: bc250_manual.md  lib.rs  manual_book.rs  manual_data.rs
arieltune/crates/bios/: Cargo.toml
arieltune/crates/bios/driver/: Makefile  NOTICE  README.md  dkms.conf  install-dkms.sh  prepare.sh  smiflash.c
arieltune/crates/bios/src/: apcb.rs  boot.rs  catalog.json  catalog.rs  cli.rs  descriptions.json  descriptions.rs  dirty.rs  effect.rs  efivar.rs  flash.rs  gate.rs  lib.rs  nvram.rs  oem.rs  risk.rs  screen.rs  smm.rs
arieltune/crates/mem/: Cargo.toml
arieltune/crates/mem/src/: bench.rs  cli.rs  cmos.rs  config.rs  fields.rs  lib.rs  metrics.rs  profiles.rs  screen.rs  sysmem.rs  tune.rs  umc.rs
arieltune/crates/mem/src/shaders/: bandwidth.spv  latency.spv  random.spv  stab_check.spv  stab_write.spv
arieltune/crates/wiki/: Cargo.toml
arieltune/crates/wiki/src/: cli.rs  lib.rs  screen.rs
arieltune/deploy/: fleet-deploy.sh
arieltune/docs/: bc250-cu-map.md  cu_map.sh
arieltune/src/: config.rs  main.rs  migrate.rs  shell.rs  tabs.rs  uninstall.rs
