[package]
name = "wiki"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "WIKI tab: the ASRock BC-250 OEM System Manual (browse + CLI). Was wikitune."

[dependencies]
bc250-catalog = { path = "../bc250-catalog" }
arieltune-tui-kit = { path = "../arieltune-tui-kit" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
